force-app/main/default/objects/Contact/fields/Account_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Account_Recordtype__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Recordtype</label>
    <type>Text</type>
</CustomField>