force-app/main/default/objects/Contact/fields/Accountmanagement__c.field-meta.xml
<CustomField>
    <fullName>Accountmanagement__c</fullName>
    <description>Niveau van accountmanagement</description>
    <inlineHelpText>Niveau van accountmanagement</inlineHelpText>
    <label>Accountmanagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operationeel</fullName>
                <default>true</default>
                <label>Operationeel</label>
            </value>
            <value>
                <fullName>Tactisch</fullName>
            </value>
            <value>
                <fullName>Strategisch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>