force-app/main/default/objects/Contact/fields/Afkorting__c.field-meta.xml
<CustomField>
    <fullName>Afkorting__c</fullName>
    <label>Afkorting</label>
    <length>5</length>
    <type>Text</type>
</CustomField>