force-app/main/default/objects/Contact/fields/Anschrift__c.field-meta.xml
<CustomField>
    <fullName>Anschrift__c</fullName>
    <formula>Account.BillingStreet&amp;BR()&amp;
Account.BillingPostalCode&amp;&quot; &quot;&amp;Account.BillingCity&amp;BR()&amp;
Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anschrift</label>
    <type>Text</type>
</CustomField>