force-app/main/default/objects/Contact/fields/Beheerder_Contact__c.field-meta.xml
<CustomField>
    <fullName>Beheerder_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Geeft de beheerder (eerste aanspreekpunt van het contact weer)</description>
    <inlineHelpText>Vul hier een Heijmans persoon in die de contactpersoon beheert, en tevens intern aanspreekpunt is.</inlineHelpText>
    <label>Beheerder Contact [Deprecated]</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contactpersonen (Beheerder Contact)</relationshipLabel>
    <relationshipName>Contactpersonen</relationshipName>
    <type>Lookup</type>
</CustomField>