force-app/main/default/objects/Contact/fields/Briefanrede__c.field-meta.xml
<CustomField>
    <fullName>Briefanrede__c</fullName>
    <formula>IF( 
AND(
NOT(ISBLANK( Title )),
OR(
ISPICKVAL( Salutation , &quot;dhr.&quot;),
ISPICKVAL( Salutation , &quot;Herr&quot;))) , &quot;Sehr geehrter Herr &quot; &amp; Title &amp;&quot; &quot;, 
IF( 
AND(
NOT(ISBLANK( Title )),
OR(
ISPICKVAL( Salutation , &quot;mevr.&quot;),
ISPICKVAL( Salutation , &quot;Frau&quot;))) , &quot;Sehr geehrte Frau &quot;&amp; Title &amp;&quot; &quot;, 
IF( 
AND(
ISBLANK( Title ),
OR(
ISPICKVAL( Salutation , &quot;dhr.&quot;),
ISPICKVAL( Salutation , &quot;Herr&quot;))) , &quot;Sehr geehrter Herr &quot;,
IF( 
AND(
ISBLANK( Title ),
OR(
ISPICKVAL( Salutation , &quot;mevr.&quot;),
ISPICKVAL( Salutation , &quot;Frau&quot;))) ,  &quot;Sehr geehrte Frau &quot;,
&quot;&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Briefanrede</label>
    <type>Text</type>
</CustomField>