force-app/main/default/objects/Contact/fields/CMO__c.field-meta.xml
<CustomField>
    <fullName>CMO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selectie voor rol binnen CMO / Accountmanagement</description>
    <inlineHelpText>Selectie voor rol binnen CMO / Accountmanagement</inlineHelpText>
    <label>CMO</label>
    <type>Checkbox</type>
</CustomField>