force-app/main/default/objects/Contact/fields/ContactManager__c.field-meta.xml
<CustomField>
    <fullName>ContactManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Wie is relatiebeheerder: Let op: deze waarde wordt overschreven indien via relatiemanagement een beheerder wordt aangemaakt</inlineHelpText>
    <label>Beheerder Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Beheerder Contact)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>