force-app/main/default/objects/Contact/fields/ContactStatusForm__c.field-meta.xml
<CustomField>
    <fullName>ContactStatusForm__c</fullName>
    <formula>IF(IsNoLongerWorking__c = false,  IMAGE(&quot;/resource/1698411441000/GraphicsPackNew/fatcow/farmfresh/16/tick.png&quot;, &quot;Active&quot;) , 
IMAGE(&quot;/resource/1698411441000/GraphicsPackNew/tangodesktopproject/16/theme/process-stop.png&quot;, &quot;Inactive&quot;) )</formula>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>