force-app/main/default/objects/Contact/fields/DMU__c.field-meta.xml
<CustomField>
    <fullName>DMU__c</fullName>
    <description>DMU positie afgekort</description>
    <formula>CASE( 
 DMU_Positie__c, 
&apos;Beslisser&apos;,&apos;B&apos;, 
&apos;Invloed met Besliskracht&apos;,&apos;I/B&apos;, 
&apos;Invloed&apos;,&apos;I&apos;, 
&apos;Probleem eigenaar&apos;,&apos;P&apos;,
&apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DMU positie afgekort</inlineHelpText>
    <label>DMU</label>
    <type>Text</type>
</CustomField>