force-app/main/default/objects/Contact/fields/DMU_Positie__c.field-meta.xml
<CustomField>
    <fullName>DMU_Positie__c</fullName>
    <description>DMU Decision Making Unit</description>
    <inlineHelpText>DMU / positie in beslisteam:
I/B = Invloed met besliskracht (bepalen de keuzes van de organisatie)
B = Beslisser (zet handtekening onder contract)
I = Invloed (denkt en praat mee in het proces)
P = Probleem eigenaar (moeite met invloed)</inlineHelpText>
    <label>DMU Positie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beslisser</fullName>
            </value>
            <value>
                <fullName>Invloed met Besliskracht</fullName>
            </value>
            <value>
                <fullName>Invloed</fullName>
            </value>
            <value>
                <fullName>Probleem eigenaar</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>