force-app/main/default/objects/Contact/fields/EMail_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>EMail_Newsletter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Soll EMail Newsletter bekommen</inlineHelpText>
    <label>EMail Newsletter</label>
    <type>Checkbox</type>
</CustomField>