force-app/main/default/objects/Contact/fields/Ervaring__c.field-meta.xml
<CustomField>
    <fullName>Ervaring__c</fullName>
    <inlineHelpText>Vorige projecten en/of functie</inlineHelpText>
    <label>Ervaring</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>