force-app/main/default/objects/Contact/fields/Firmen_Datensatztyp__c.field-meta.xml
<CustomField>
    <fullName>Firmen_Datensatztyp__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firmen Datensatztyp</label>
    <type>Text</type>
</CustomField>