force-app/main/default/objects/Contact/fields/Franki_report__c.field-meta.xml
<CustomField>
    <fullName>Franki_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Franki report</label>
    <type>Checkbox</type>
</CustomField>