force-app/main/default/objects/Contact/fields/FullNameForm__c.field-meta.xml
<CustomField>
    <fullName>FullNameForm__c</fullName>
    <description>Formula to combine the first and the lastname to use in related lists for custom objects (junction object).</description>
    <formula>FirstName + &quot; &quot; + LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>