force-app/main/default/objects/Contact/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Use this field to fill in the function of this person</description>
    <inlineHelpText>Use this field to fill in the function of this person</inlineHelpText>
    <label>Function</label>
    <length>15</length>
    <type>Text</type>
</CustomField>