force-app/main/default/objects/Contact/fields/Groepering__c.field-meta.xml
<CustomField>
    <fullName>Groepering__c</fullName>
    <inlineHelpText>Groepering voor filtering contactpersonen (meerdere keuzes mogelijk)</inlineHelpText>
    <label>Groepering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waterveiligheid</fullName>
            </value>
            <value>
                <fullName>Wind en Zon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>