force-app/main/default/objects/Contact/fields/IsNoLongerWorking__c.field-meta.xml
<CustomField>
    <fullName>IsNoLongerWorking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if the contact is still working at this company.</description>
    <label>No Longer Working</label>
    <type>Checkbox</type>
</CustomField>