force-app/main/default/objects/Contact/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a test checkbox for the CI/CD test.</description>
    <inlineHelpText>This is a test checkbox for the CI/CD test.</inlineHelpText>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>