force-app/main/default/objects/Contact/fields/Kalender__c.field-meta.xml
<CustomField>
    <fullName>Kalender__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>?</inlineHelpText>
    <label>Kalender</label>
    <type>Checkbox</type>
</CustomField>