force-app/main/default/objects/Contact/fields/Linked_in__c.field-meta.xml
<CustomField>
    <fullName>Linked_in__c</fullName>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>