force-app/main/default/objects/Contact/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <inlineHelpText>Selectie voor Events / Aandacht</inlineHelpText>
    <label>Marketing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Klantevent</fullName>
            </value>
            <value>
                <fullName>Kerstkaart</fullName>
            </value>
            <value>
                <fullName>Nieuwsbrief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>