force-app/main/default/objects/Contact/fields/Naam_formeel__c.field-meta.xml
<CustomField>
    <fullName>Naam_formeel__c</fullName>
    <formula>if(not( ISPICKVAL(Salutation,&quot;&quot;)),TEXT(Salutation)&amp;&quot; &quot;,&quot;&quot;)&amp;if(not(Voorletter_s__c==null),Voorletter_s__c &amp;&quot; &quot;,&quot;&quot;)&amp;&quot; &quot;&amp;LastName</formula>
    <label>Naam formeel</label>
    <type>Text</type>
</CustomField>