force-app/main/default/objects/Contact/fields/Naam_informeel__c.field-meta.xml
<CustomField>
    <fullName>Naam_informeel__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id , FirstName + &apos; &apos; + LastName,&apos;_self&apos;)</formula>
    <label>Naam informeel</label>
    <type>Text</type>
</CustomField>