force-app/main/default/objects/Contact/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <description>Organisatie</description>
    <inlineHelpText>Intern Heijmans: Afkorting naam
Extern: Beknopte weergave organisatie</inlineHelpText>
    <label>Org</label>
    <length>18</length>
    <type>Text</type>
</CustomField>