force-app/main/default/objects/Contact/fields/OrganizationLevelPick__c.field-meta.xml
<CustomField>
    <fullName>OrganizationLevelPick__c</fullName>
    <description>Pick the Organization Level.</description>
    <label>Organization Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BoardLevel</fullName>
                <label>Board level</label>
            </value>
            <value>
                <fullName>SeniorManagement</fullName>
                <label>Senior Management</label>
            </value>
            <value>
                <fullName>MiddleManagement</fullName>
                <label>Middle Management</label>
            </value>
            <value>
                <fullName>OperationalLevel</fullName>
                <label>Operational Level</label>
            </value>
            <value>
                <fullName>ProfessionalLevel</fullName>
                <label>Professional Level</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>