force-app/main/default/objects/Contact/fields/OtherContacts__c.field-meta.xml
<CustomField>
    <fullName>OtherContacts__c</fullName>
    <label>Overige Contactpersonen</label>
    <type>TextArea</type>
</CustomField>