force-app/main/default/objects/Contact/fields/Overige_Contactpersonen__c.field-meta.xml
<CustomField>
    <fullName>Overige_Contactpersonen__c</fullName>
    <description>Zet hier de contactpersonen van Heijmans in die deze contactpersoon ook kennen.</description>
    <inlineHelpText>Zet hier de contactpersonen van Heijmans in die deze contactpersoon ook kennen.</inlineHelpText>
    <label>Overige Contactpersonen [Deprecated]</label>
    <type>TextArea</type>
</CustomField>