force-app/main/default/objects/Contact/fields/Pensioen__c.field-meta.xml
<CustomField>
    <fullName>Pensioen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pensioen</label>
    <type>Checkbox</type>
</CustomField>