force-app/main/default/objects/Contact/fields/PictureURL__c.field-meta.xml
<CustomField>
    <fullName>PictureURL__c</fullName>
    <description>This field contains the url of the contact&apos;s picture. It will be used in a flow to display the image of the contact on the lighting record page</description>
    <inlineHelpText>Insert here the url of the contact&apos;s image. In order to copy an image from LinkedIn, first click on the contact&apos;s picture so it pops up, then right mouse click on &quot;Copy Image Address&quot; and paste this url into this field.</inlineHelpText>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>