force-app/main/default/objects/Contact/fields/PostcodeCheck__c.field-meta.xml
<CustomField>
    <fullName>PostcodeCheck__c</fullName>
    <formula>IF(
AND(
LEN(MailingPostalCode) = 7,
VALUE(LEFT(MailingPostalCode, 1)) &lt;&gt;0,
VALUE(MID(MailingPostalCode, 2, 1)) &gt;= 0,
VALUE(MID(MailingPostalCode, 3, 1)) &gt;= 0,
VALUE(MID(MailingPostalCode, 4, 1)) &gt;= 0,
MID(MailingPostalCode, 5, 1)==&apos; &apos;,
NOT(ISNUMBER(MID(MailingPostalCode, 6, 1))),
NOT(ISNUMBER(MID(MailingPostalCode, 7, 1)))
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PostcodeCheck</label>
    <type>Checkbox</type>
</CustomField>