force-app/main/default/objects/Contact/fields/Regio_MO__c.field-meta.xml
<CustomField>
    <fullName>Regio_MO__c</fullName>
    <description>Is de account van deze contactpersoon gelabeld aan Regio MO?</description>
    <formula>IF(INCLUDES(Account.Regio_Infra__c,&apos;Midden Oost&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is de account van deze contactpersoon gelabeld aan Regio Midden Oost?</inlineHelpText>
    <label>Regio MO</label>
    <type>Checkbox</type>
</CustomField>