force-app/main/default/objects/Contact/fields/Regio_NW__c.field-meta.xml
<CustomField>
    <fullName>Regio_NW__c</fullName>
    <description>Is de account van deze contactpersoon gelabeld aan Regio NW?</description>
    <formula>IF(INCLUDES(Account.Regio_Infra__c,&apos;Noord West&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is de account van deze contactpersoon gelabeld aan Regio Noord West?</inlineHelpText>
    <label>Regio NW</label>
    <type>Checkbox</type>
</CustomField>