force-app/main/default/objects/Contact/fields/Regio_Z__c.field-meta.xml
<CustomField>
    <fullName>Regio_Z__c</fullName>
    <description>Is de account van deze contactpersoon gelabeld aan Regio Zuid?</description>
    <formula>IF(INCLUDES(Account.Regio_Infra__c,&apos;Zuid&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is de account van deze contactpersoon gelabeld aan Regio Zuid?</inlineHelpText>
    <label>Regio Z</label>
    <type>Checkbox</type>
</CustomField>