force-app/main/default/objects/Contact/fields/Regio_ZW__c.field-meta.xml
<CustomField>
    <fullName>Regio_ZW__c</fullName>
    <description>Is de account van deze contactpersoon gelabeld aan Regio ZW?</description>
    <formula>IF(INCLUDES(Account.Regio_Infra__c,&apos;Zuid West&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is de account van deze contactpersoon gelabeld aan Regio Zuid West?</inlineHelpText>
    <label>Regio ZW</label>
    <type>Checkbox</type>
</CustomField>