force-app/main/default/objects/Contact/fields/ResponsibleFor__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleFor__c</fullName>
    <label>Responsible for</label>
    <type>TextArea</type>
</CustomField>