force-app/main/default/objects/Contact/fields/Sharing_Heijmans_Franki__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Heijmans_Franki__c</fullName>
    <formula>Account.Sharing_Heijmans_Franki__c</formula>
    <label>Sharing Heijmans-Franki</label>
    <type>Checkbox</type>
</CustomField>