force-app/main/default/objects/Contact/fields/Status_contact__c.field-meta.xml
<CustomField>
    <fullName>Status_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Status contact beheerder</description>
    <inlineHelpText>Uit relatiemanagement wordt status contact van de Beheerder overgenomen</inlineHelpText>
    <label>Relatiemanagement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Relatiemanagement__c.Beheerder_contact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Relatiemanagement__c</referenceTo>
    <relationshipLabel>Contactpersonen</relationshipLabel>
    <relationshipName>Contactpersonen</relationshipName>
    <type>Lookup</type>
</CustomField>