force-app/main/default/objects/Contact/fields/Status_relatie__c.field-meta.xml
<CustomField>
    <fullName>Status_relatie__c</fullName>
    <description>Status van de relatie van de beheerder</description>
    <formula>TEXT(Status_contact__r.Status_Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Neemt de status van de relatie van de beheerder over</inlineHelpText>
    <label>Status relatie</label>
    <type>Text</type>
</CustomField>