force-app/main/default/objects/Contact/fields/StatusPick__c.field-meta.xml
<CustomField>
    <fullName>StatusPick__c</fullName>
    <description>When a contact is set to inactief the status of that inactivity needs to be set.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changed Jobs</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>