force-app/main/default/objects/Contact/fields/Titel__c.field-meta.xml
<CustomField>
    <fullName>Titel__c</fullName>
    <label>Titel</label>
    <length>32</length>
    <type>Text</type>
</CustomField>