force-app/main/default/objects/Contact/fields/Type_persoon__c.field-meta.xml
<CustomField>
    <fullName>Type_persoon__c</fullName>
    <inlineHelpText>Geef hier kenmerkende eigenschappen in handlen</inlineHelpText>
    <label>Type persoon</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>