force-app/main/default/objects/Contact/fields/Voorletter_s__c.field-meta.xml
<CustomField>
    <fullName>Voorletter_s__c</fullName>
    <description>Geef hier de voorletter(s) van de contactpersoon die je wil toevoegen</description>
    <label>Voorletter(s)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>