force-app/main/default/objects/Contact/fields/Weihnachtskarte__c.field-meta.xml
<CustomField>
    <fullName>Weihnachtskarte__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>?</inlineHelpText>
    <label>Weihnachtskarte</label>
    <type>Checkbox</type>
</CustomField>