force-app/main/default/objects/Contact/fields/Working_weekhours__c.field-meta.xml
<CustomField>
    <fullName>Working_weekhours__c</fullName>
    <label>Working weekhours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>