force-app/main/default/objects/Contact/fields/ZZP__c.field-meta.xml
<CustomField>
    <fullName>ZZP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZZP&apos;er (inhuur)</description>
    <inlineHelpText>Aanvinken indien contactpersoon vrij structureel is ingehuurd va de account</inlineHelpText>
    <label>ZZP</label>
    <type>Checkbox</type>
</CustomField>