force-app/main/default/objects/Contact/recordTypes/Extern_contact.recordType-meta.xml
<RecordType>
    <fullName>Extern_contact</fullName>
    <active>true</active>
    <description>Een contact buiten Heijmans</description>
    <label>Extern contact</label>
</RecordType>