force-app/main/default/objects/Contact/recordTypes/Heijmans_contact.recordType-meta.xml
<RecordType>
    <fullName>Heijmans_contact</fullName>
    <active>true</active>
    <description>Medewerker van Heijmans</description>
    <label>Heijmans contact</label>
</RecordType>