force-app/main/default/objects/Contact/validationRules/Anrede_Plichtfeld.validationRule-meta.xml
<ValidationRule>
    <fullName>Anrede_Plichtfeld</fullName>
    <active>true</active>
    <description>Aanhef is verplicht</description>
    <errorConditionFormula>AND(
ISBLANK(TEXT(Salutation)),
Account_Recordtype__c = &quot;Franki&quot;)</errorConditionFormula>
    <errorMessage>Anrede ist ein Plichtfeld.</errorMessage>
</ValidationRule>