force-app/main/default/objects/Contact/validationRules/VR02_CON_MobileFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_CON_MobileFormat</fullName>
    <active>true</active>
    <description>This validation rule prevents users from formatting the phone number without country and area code. According to the E.164 (Default)</description>
    <errorConditionFormula>AND (
Not (ISBLANK (MobilePhone)),
$Setup.BypassSettings__c.ValidationRules__c = False,
NOT(REGEX(MobilePhone, &quot;^\\+?[1-9]\\d{1,14}$&quot;)))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>You need to insert the phone number in the correct format. See example: +31611111111 [VR02]</errorMessage>
</ValidationRule>