force-app/main/default/objects/Contact/validationRules/VR03_CON_AccountChangeNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_CON_AccountChangeNotAllowed</fullName>
    <active>true</active>
    <description>Account modification for a contact after creation is restricted. Please utilize the &quot;Move Contact&quot; functionality instead.</description>
    <errorConditionFormula>AND(
  ISCHANGED( AccountId ),
  NOT(ISNEW()),
  $Setup.BypassSettings__c.ValidationRules__c = False
)</errorConditionFormula>
    <errorMessage>Account modification for a contact after creation is restricted. Please utilize the &quot;Move Contact&quot; functionality instead. [VR03]</errorMessage>
</ValidationRule>