force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Beheerder_Contact__c</columns>
    <columns>Overige_Contactpersonen__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Recordtype__c</field>
        <operation>equals</operation>
        <value>Heijmans klant</value>
    </filters>
    <label>Alle contactpersonen S&amp;S</label>
    <language>en_US</language>
    <sharedTo>
        <group>Heijmans_Roles</group>
        <group>T_S_SIT</group>
    </sharedTo>
</ListView>