force-app/main/default/objects/Contact/listViews/Alle_contacten_Directieniveau.listView-meta.xml
<ListView>
    <fullName>Alle_contacten_Directieniveau</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OrganizationLevelPick__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrganizationLevelPick__c</field>
        <operation>equals</operation>
        <value>BoardLevel</value>
    </filters>
    <label>Alle contacten - Directieniveau</label>
</ListView>