force-app/main/default/objects/Contact/listViews/Alle_contacten_Senior_management.listView-meta.xml
<ListView>
    <fullName>Alle_contacten_Senior_management</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OrganizationLevelPick__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrganizationLevelPick__c</field>
        <operation>equals</operation>
        <value>SeniorManagement</value>
    </filters>
    <filters>
        <field>IsNoLongerWorking__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Alle contacten - Senior management</label>
</ListView>