force-app/main/default/objects/Contact/listViews/Alle_inactieve_contactpersonen.listView-meta.xml
<ListView>
    <fullName>Alle_inactieve_contactpersonen</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OrganizationLevelPick__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsNoLongerWorking__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Alle inactieve contactpersonen</label>
</ListView>