force-app/main/default/objects/Contact/listViews/Alle_incomplete_contactpersonen.listView-meta.xml
<ListView>
    <fullName>Alle_incomplete_contactpersonen</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>OrganizationLevelPick__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.PHONE3</field>
        <operation>equals</operation>
    </filters>
    <label>Alle contactpersonen - Incompleet</label>
</ListView>