force-app/main/default/objects/Contact/listViews/Alle_Kontakte_No_Account.listView-meta.xml
<ListView>
    <fullName>Alle_Kontakte_No_Account</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Afkorting__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Alle Kontakte - No Account</label>
    <sharedTo>
        <group>Franki_Roles</group>
    </sharedTo>
</ListView>