force-app/main/default/objects/Contact/listViews/Contacten_Rijksoverheid.listView-meta.xml
<ListView>
    <fullName>Contacten_Rijksoverheid</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Rijksoverheid</value>
    </filters>
    <label>Contacten Rijksoverheid</label>
    <language>nl_NL</language>
</ListView>