force-app/main/default/objects/Contact/listViews/Contacts_met_tussenvoegsel.listView-meta.xml
<ListView>
    <fullName>Contacts_met_tussenvoegsel</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Contacts met tussenvoegsel</label>
    <language>en_US</language>
</ListView>