force-app/main/default/objects/Contact/listViews/FRANKI_EMail_Newsletter.listView-meta.xml
<ListView>
    <fullName>FRANKI_EMail_Newsletter</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>EMail_Newsletter__c</columns>
    <columns>Franki_report__c</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Record_Type__c</field>
        <operation>equals</operation>
        <value>Franki</value>
    </filters>
    <filters>
        <field>EMail_Newsletter__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>FRANKI EMail Newsletter</label>
    <language>de</language>
    <sharedTo>
        <roleAndSubordinates>Franki_Gruppe</roleAndSubordinates>
    </sharedTo>
</ListView>