force-app/main/default/objects/Contact/listViews/Heijmans_Infra.listView-meta.xml
<ListView>
    <fullName>Heijmans_Infra</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CMO__c</columns>
    <columns>Org__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Pensioen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Heijmans Infra</value>
    </filters>
    <label>Heijmans Infra</label>
    <language>nl_NL</language>
</ListView>