force-app/main/default/objects/Contact/listViews/Mijn_nieuwe_contacten_afgelopen_14_dgn.listView-meta.xml
<ListView>
    <fullName>Mijn_nieuwe_contacten_afgelopen_14_dgn</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OrganizationLevelPick__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>Al mijn nieuwe contacten afgelopen 14dgn</label>
</ListView>